rename usb keyboard driver

--- a/usb_keyboard_driver/Makefile
+++ b/usb_keyboard_driver/Makefile
@@ -1,6 +1,9 @@
+CFLAGS_skdrv.o = -DDEBUG
+CONFIG_MODULE_SIG=n
+
 KDIR ?= /lib/modules/$(shell uname -r)/build
 
-obj-m += skdrv.o
+obj-m += usb_keyboard.o
 
 all:
 	make -C $(KDIR) M=$(PWD) modules
