--- a/task05/Makefile
+++ b/task05/Makefile
@@ -1,9 +1,9 @@
-CFLAGS_skdrv.o = -DDEBUG
+CFLAGS_task05.o = -DDEBUG
 CONFIG_MODULE_SIG=n
 
 KDIR ?= /lib/modules/$(shell uname -r)/build
 
-obj-m += usb_keyboard.o
+obj-m += task05.o
 
 all:
 	make -C $(KDIR) M=$(PWD) modules
