--- a/task06/Makefile
+++ b/task06/Makefile
@@ -1,9 +1,9 @@
-CFLAGS_skdrv.o = -DDEBUG
+CFLAGS_task06.o = -DDEBUG
 CONFIG_MODULE_SIG=n
 
 KDIR ?= /lib/modules/$(shell uname -r)/build
 
-obj-m += miscd.o
+obj-m += task06.o
 
 all:
 	make -C $(KDIR) M=$(PWD) modules
