--- a/task08/Makefile
+++ b/task08/Makefile
@@ -1,9 +1,9 @@
-CFLAGS_skdrv.o = -DDEBUG
+CFLAGS_task08.o = -DDEBUG
 CONFIG_MODULE_SIG=n
 
 KDIR ?= /lib/modules/$(shell uname -r)/build
 
-obj-m += dfsd.o
+obj-m += task08.o
 
 all:
 	make -C $(KDIR) M=$(PWD) modules
